--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,23 +4,26 @@
 
     <application
         android:allowBackup="true"
+        android:windowSoftInputMode="stateVisible"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExCustomView">
-        <activity android:name=".activities.AnimationActivity"></activity>
+        <activity android:name=".activities.AnimationActivity">
+
+        </activity>
         <activity android:name=".activities.CustomActivity" />
         <activity android:name=".activities.LockPatternActivity" />
         <activity android:name=".activities.ClockActivity" >
+
+        </activity>
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activities.MainActivity">
-
         </activity>
     </application>
 
